# frepple

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  AUTHORS  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  COPYING  ChangeLog  Gruntfile.js  INSTALL  Makefile.am  Makefile.dist  NEWS  README  README.md  SECURITY.md  config.guess  config.sub  configure  configure.ac  configure.in  djangosettings-distr.py  djangosettings.py  extract-vue-translations.js  frepplectl.py  ltmain.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  setup.py.in  (+4 more)
contrib/: Makefile.am
contrib/apache/: Makefile.am  README.txt  createmodel.pl  filter.cpp  frepple.conf  frepple.crt  frepple.key  inventory.cpp  mod_frepple.cpp  mod_frepple.h
contrib/borland/: Makefile.am  README.txt  frepple.mak
contrib/debian/: .gitattributes  .gitignore  Makefile.am  README.txt  changelog  conffiles  control  copyright  frepple-dev.install  frepple.install  frepple.postinst  frepple.postrm  httpd.conf  rules
contrib/django/: .gitignore  Gruntfile.js  Makefile.am  README.txt  django.git_patch  django.patch  djangosettings.py  frepplectl.py  freppledb.wsgi  httpd.conf  manage.py  package.json  requirements.txt  runserver.py  setup.py
contrib/docker/: .gitignore  CMakeLists.txt  Makefile.am  README.txt  alpine-3.dockerfile  centos-8.dockerfile  debian-10.dockerfile  docker-compose.yml  docker-compose.yml.in  dockerfile  entrypoint.sh  opensuse-15.1.dockerfile  rhel-8.dockerfile  rockylinux-8.dockerfile  ubuntu-18.04.dockerfile  ubuntu-20.04.dockerfile  ubuntu-24.04.dockerfile  ubuntu-devel.dockerfile
contrib/excel/: Makefile.am  README.txt  commands.xml  frepple.xla  frepple.xls  frepple.xsd  frepple_flat.xsd  preprocess.xsl
contrib/installer/: CMakeLists.txt  Makefile.am  README.txt  database.ini  finish.ini  frepple.nsi  frepplectl.py  freppleserver.py  freppleservice.py  licensefile.ini  manage.py  parameters.ini  planner.nsi  runserver.py  sendusage.ini  servicehandler.py  settings.nsi.in  setup.py
contrib/j2ee/: .classpath  .packaging  .project  Makefile.am  README.txt  build.xml
contrib/kubernetes/: frepple-deployment.yaml  frepple-networkpolicy.yaml  frepple-postgres-deployment.yaml
contrib/linux/: .gitignore  CMakeLists.txt  Makefile.am  README.txt  conffiles  config  docker-compose.yml  httpd.conf  postinst  postrm  preinst  rpm_post_install  rpm_post_uninstall  rpm_pre_install  templates
contrib/odoo/: .gitignore  Makefile.am  README.txt  setup.py
contrib/openerp/: Makefile.am  README.txt
contrib/rpm/: Makefile.am  README.txt  frepple.spec  httpd.conf
contrib/scripting/: Makefile.am  README.txt  frepple.i  frepple_java.java  frepple_perl.pl  frepple_python.py
contrib/vc/: .gitignore  Makefile.am  README.txt  build.bat  build64.bat  common_python.vcproj  dll.vcproj  dll.vcxproj  dll.vcxproj.filters  frepple.sln  main.vcproj  main.vcxproj  main.vcxproj.filters  main_static.vcproj  model.vcproj  model.vcxproj  model.vcxproj.filters  module_forecast.vcproj  module_forecast.vcxproj  module_lp_solver.vcproj  module_lp_solver.vcxproj  module_lp_solver.vcxproj.filters  module_python.vcproj  module_webservice.vcproj  module_webservice.vcxproj  pythonextension.vcxproj  pythonextension.vcxproj.filters  solver.vcproj  solver.vcxproj  solver.vcxproj.filters  staticlib.vcproj  swig.vcproj  utils.vcproj  utils.vcxproj  utils.vcxproj.filters
contrib/webservice/: Makefile.am  README.txt  client.vcproj  clientmain.cpp  dll.vcproj  frepple.wsdl  staticlib.vcproj  webservice.sln
doc/: .gitignore  CMakeLists.txt  Makefile.am  api_styles.css  apifooter.html  apiheader.html  apistyles.css  architecture.html  branding-guidelines.rst  build.bat  clients.html  code_structure.html  command-reference.rst  conf.py  doxygen.css  faq.rst  features.rst  frepple.1  frepple.doxyfile  frepple.py  frepplectl.1  generate.py  header.doxyfile  home.html  htmlindexer.py  index.html  index.rst  license.rst  maintenance.html  menu.html  modeling.html  modeling_concepts.html  performance.html  planner.doxyfile  release-archive.rst  release-notes.rst  search.html  solver.html  styles.css  tests.html  (+1 more)
doc/ERP-integration/: erpnext-connector.rst  index.rst
doc/a-day-in-the-life/: index.rst
doc/apps/: debugreport.rst  erpconnection.rst  executesql.rst  forecast.rst  index.rst  metrics.rst  mlforecast.rst  odoo.rst  otp_authentication.rst  reportmanager.rst  wizard.rst
doc/cookbook/: index.rst
doc/developer-guide/: adding-or-customizing-a-report.rst  architecture.rst  creating-a-custom-theme.rst  creating-an-extension-app.rst  index.rst  linux-compiling.rst  planning-algorithm.rst  python.rst  security.rst  translating-the-user-interface.rst  using-a-dev-container.rst  xml.rst
doc/erp-integration/: index.rst  odoo-connector.rst  openbravo-connector.rst
doc/examples/: index.rst
doc/extension-modules/: forecast-module.rst  index.rst  inventory-planning-module.rst  odoo-connector.rst  openbravo-connector.rst  order-quoting-module.rst  web-service-module.rst
doc/installation-guide/: advanced-configuration.rst  backup.rst  development-environment.rst  docker-container.rst  hardware-requirements.rst  index.rst  linux-binaries.rst  linux-compiling.rst  multi-model.rst  other-platforms.rst  python-module.rst  setting-disk-space-quotas.rst  upgrading.rst  vmware.rst  windows-apache.rst  windows-compiling.rst  windows-installer.rst
doc/integration-guide/: api.rst  batch-commands.rst  csv-files.rst  database-access.rst  embedding.rst  excel-files.rst  generic-erp-connector.rst  index.rst  odoo-connector.rst  openbravo-connector.rst  remote-commands.rst  uzerp-connector.rst
doc/model-reference/: api.rst  apikeys.rst  attributes.rst  buckets.rst  buffer.rst  buffers.rst  flow.rst  (+57 more)
src/: .gitignore  CMakeLists.txt  Makefile.am  dll.rc  dllmain.cpp  exe.rc  frepple.def  frepple.rc.in  main.cpp  pythonextension.cpp  setup.py  tags.cpp
test/: Makefile.am  TestLib.pm  runtest.pl  runtest.py
(+3169 files in other folders)
