[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "9.4.0"
description = "frePPLe - open source Production PLanning"
name = "freppledb"
authors = [{ name = "frepple.com", email = "info@frepple.com" }]
license = { file = "COPYING" }
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Manufacturing",
    "Framework :: Django",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://frepple.com"
"Bug Tracker" = "https://github.com/frepple/frepple/issues"
Repository = "https://github.com/frepple/frepple.git"
Documentation = "https://frepple.com/docs/current"
Changelog = "https://frepple.com/docs/current/release-notes"

[tool.setuptools.packages.find]
include = ["freppledb*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*"]
